# specutils

./: README.md  pyproject.toml
specutils/: __main__.py  classify.py  clean.py
