[tool.poetry]
name = "specutils"
version = "0.1.0"
description = "Spectroscopy utils"
authors = ["Robert Stein <rdstein@caltech.edu>"]
maintainers = [
    "Robert Stein <rdstein@caltech.edu>",
]
license = "MIT"
repository = "https://github.com/robertdstein/specutils"
documentation = "https://github.com/robertdstein/specutils"
keywords = ["spectroscopy"]
readme = "README.md"
classifiers = [
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
pandas = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"